--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,6 +4,8 @@ on:
     branches:
       - master
   workflow_dispatch:
+  schedule:
+    - cron: '25 6 * * *' #Every day at 11:55 AM
 jobs:
   build:
     runs-on: ubuntu-latest
